--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
      
           <div style="border: 1px solid black; margin:10px; padding:10px; ">
                <div style="font-size:20px;">
-                    <a href="/kubernetes/">Kubernetes</a>
+                    <a href="/LearningBlog/kubernetes/">Kubernetes</a>
                </div>
                <div style="color:grey; font-size:16px;">Saturday, Jul 4, 2020</div>
                <div style="color:grey; font-size:16px;"></div>
@@ -26,7 +26,7 @@
      
           <div style="border: 1px solid black; margin:10px; padding:10px; ">
                <div style="font-size:20px;">
-                    <a href="/a/">A</a>
+                    <a href="/LearningBlog/a/">A</a>
                </div>
                <div style="color:grey; font-size:16px;">Saturday, Jul 4, 2020</div>
                <div style="color:grey; font-size:16px;"></div>
