--- a/public/kubernetes/index.html
+++ b/public/kubernetes/index.html
@@ -13,7 +13,7 @@
      
           <div style="border: 1px solid black; margin:10px; padding:10px; ">
                <div style="font-size:20px;">
-                    <a href="/kubernetes/1/">1</a>
+                    <a href="/LearningBlog/kubernetes/1/">1</a>
                </div>
                <div style="color:grey; font-size:16px;">Saturday, Jul 4, 2020</div>
                <div style="color:grey; font-size:16px;"></div>
